MOB-228 Fixed the header scrolling bug for map views and back button getting stuck in hover style.

--- a/assets/www/css/SU-beta.css
+++ b/assets/www/css/SU-beta.css
@@ -236,7 +236,6 @@ padding-right: 10px;
   width: 21px;
 }
 
-.backbutton:hover,
 .backbutton:focus,
 .backbutton:active {
   background: #dae2ec;
@@ -247,7 +246,6 @@ padding-right: 10px;
   background: linear-gradient(0deg, #dae2ec 0%, #dae2ec 0%) repeat scroll 0 0 transparent;
 }
 
-.backbutton:hover:before,
 .backbutton:focus:before,
 .backbutton:active:before {
   background: #dae2ec;
@@ -489,6 +487,7 @@ div.search-box .ui-btn-hover-b .ui-last-child {
   margin-top: 44px !important;
   max-width: 100% !important;
   width: 60% !important;
+  overflow: visible;
 }
 
 /*************
@@ -633,4 +632,8 @@ div.search-box .ui-btn-hover-b .ui-last-child {
 .studentservice-page .studentservice-list .ui-btn-hover-c span {
     color: #002e5f;
     text-shadow: none !important;
+}
+
+.ui-mobile .ui-page-active {
+    overflow: hidden;
 }
